versioned_docs/version-2.5/reference/subsystems/shfmt.mdx
---
title: shfmt
description: An autoformatter for shell scripts (https://github.com/mvdan/sh).
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

An autoformatter for shell scripts (https://github.com/mvdan/sh).

Backend: <span className="color--primary">``</span>

Config section: <span className="color--primary">`[shfmt]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]shfmt-skip`}
  env_repr='PANTS_SHFMT_SKIP'
  toml_repr={`[shfmt]
skip = <bool>`}
  default_repr={`False`}
>

Don&#x27;t use shfmt when running `./pants fmt` and `./pants lint`.

</Option>

### `args`

<Option
  cli_repr={`--shfmt-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr='PANTS_SHFMT_ARGS'
  toml_repr={`[shfmt]
args = [
    <shell_str>,
    <shell_str>,
    ...,
]`}
  default_repr={`[]`}
>

Arguments to pass directly to shfmt, e.g. `--shfmt-args='-i 2'`.&#x27;

</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--shfmt-version=<str>`}
  env_repr='PANTS_SHFMT_VERSION'
  toml_repr={`[shfmt]
version = <str>`}
  default_repr={`v3.2.4`}
>

Use this version of shfmt.

</Option>

### `known_versions`

<Option
  cli_repr={`--shfmt-known-versions="['<str>', '<str>', ...]"`}
  env_repr='PANTS_SHFMT_KNOWN_VERSIONS'
  toml_repr={`[shfmt]
known_versions = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "v3.2.4|darwin|43a0461a1b54070ddc04fbbf1b78f7861ee39a65a61f5466d15a39c4aba4f917|2980208",\n  "v3.2.4|linux|3f5a47f8fec27fae3e06d611559a2063f5d27e4b9501171dde9959b8c60a3538|2797568"\n]`}
>

Known versions to verify downloads against.

Each element is a pipe-separated string of `version|platform|sha256|length`, where:

- `version` is the version string
- `platform` is one of [darwin,linux],
- `sha256` is the 64-character hex representation of the expected sha256
  digest of the download file, as emitted by `shasum -a 256`
- `length` is the expected length of the download file in bytes, as emmitted by
  `wc -c`

E.g., `3.1.2|darwin|6d0f18cd84b918c7b3edd0203e75569e0c7caecb1367bbbe409b44e28514f5be|42813`.

Values are space-stripped, so pipes can be indented for readability if necessary.

</Option>

### `url_template`

<Option
  cli_repr={`--shfmt-url-template=<str>`}
  env_repr='PANTS_SHFMT_URL_TEMPLATE'
  toml_repr={`[shfmt]
url_template = <str>`}
  default_repr={`https://github.com/mvdan/sh/releases/download/{version}/shfmt_{version}_{platform}_amd64`}
>

URL to download the tool, either as a single binary file or a compressed file (e.g. zip file). You can change this to point to your own hosted file, e.g. to work with proxies or for access via the filesystem through a file:// URL.

Use `{version}` to have the value from --version substituted, and `{platform}` to have a value from --url-platform-mapping substituted in, depending on the current platform. For example, https://github.com/.../protoc-&#123;version&#125;-&#123;platform&#125;.zip.

</Option>

### `url_platform_mapping`

<Option
  cli_repr={`--shfmt-url-platform-mapping="{'key1': val1, 'key2': val2, ...}"`}
  env_repr='PANTS_SHFMT_URL_PLATFORM_MAPPING'
  toml_repr={`[shfmt.url_platform_mapping]
key1 = val1
key2 = val2
...`}
  default_repr={`{\n  "darwin": "darwin",\n  "linux": "linux"\n}`}
>

A dictionary mapping platforms to strings to be used when generating the URL to download the tool.

In --url-template, anytime the `{platform}` string is used, Pants will determine the current platform, and substitute `{platform}` with the respective value from your dictionary.

For example, if you define `{"darwin": "apple-darwin", "linux": "unknown-linux"}, and run Pants on Linux, then `&#123;platform&#125;` will be substituted in the --url-template option with unknown-linux.

</Option>

### `config_discovery`

<Option
  cli_repr={`--[no-]shfmt-config-discovery`}
  env_repr='PANTS_SHFMT_CONFIG_DISCOVERY'
  toml_repr={`[shfmt]
config_discovery = <bool>`}
  default_repr={`True`}
>

If true, Pants will include all relevant `.editorconfig` files during runs. See https://editorconfig.org.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
